# natural-disaster-data-agent

./: .env.example  .gitignore  Dockerfile  QUICK_START.sh  README.md  SYSTEM_STATUS.md  WEB_AGENT_FILES.md  WEB_AGENT_README.md  docker-compose.yml  main.py  pyproject.toml  test_web_agent.py
docs/: WEB_AGENT_IMPLEMENTATION.md  WEB_AGENT_SETUP.md
infra/litellm/: config.yaml  docker-compose.yml
src/: __init__.py  config.py
src/agents/: __init__.py  emdat_agent.py  usgs_agent.py  web_agent.py  web_agent_core.py
src/dashboard/: __init__.py  app.py
src/database/: __init__.py  init.sql  schema.sql
src/etl/: __init__.py  pipeline.py  transformations.py
src/services/: __init__.py  web_agent_api.py
